初始化项目

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+endpoints.shutdown.enabled=true
+personName=Chuan
+logging.file=log.log
+spring.datasource.url=jdbc:mysql://localhost:3306/blog
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+
+spring.profiles.active=prod
+
+spring.http.multipart.max-file-size: 1280KB
+spring.http.multipart.max-request-size: 12800KB
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
