--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,20 @@
 	</parent>
 	<groupId>com.magicliang</groupId>
 	<artifactId>spring-experiments</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${revision}</version>
 	<name>spring-experiments</name>
+	<packaging>pom</packaging>
 	<description>spring new feature experiment</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<revision>1.0.0-SNAPSHOT</revision>
 	</properties>
+
+	<modules>
+		<module>old-project</module>
+		<module>new-project</module>
+	</modules>
 
 	<dependencies>
 		<dependency>
