--- a/new-project/pom.xml
+++ b/new-project/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>spring-experiments</artifactId>
@@ -9,5 +10,8 @@
     </parent>
     <artifactId>new-project</artifactId>
     <packaging>jar</packaging>
-    <name>old-project</name>
+    <name>new-project</name>
+
+    <dependencies>
+    </dependencies>
 </project>
