--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>old-project</module>
 		<!-- 这里依赖的不是 child pom 里的 name 和 artifactid，而是 name -->
 		<module>aspectj-weaver-ltw</module>
+		<module>spring-instrument-ltw</module>
 	</modules>
 
 	<dependencies>
