--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<!-- 这里依赖的不是 child pom 里的 name 和 artifactid，而是 name -->
 		<module>aspectj-weaver-ltw</module>
 		<module>spring-instrument-ltw</module>
+		<module>compile-time-weaver</module>
 	</modules>
 
 	<dependencies>
@@ -37,6 +38,7 @@
 		<!--			<artifactId>spring-aop</artifactId>-->
 		<!--		</dependency>-->
 		<!--		<dependency>-->
+		<!-- aspectjweaver 是它的超集 -->
 		<!--			<groupId>org.aspectj</groupId>-->
 		<!--			<artifactId>aspectjrt</artifactId>-->
 		<!--		</dependency>-->
